<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arkflash</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_air">Open Air</string>
    <string name="switch_gears">Switch Gears</string>
    <string name="mcs_panels">MCs/Panels</string>
    <string name="cables">Cables</string>
    <string name="grounded">Grounded</string>
    <string name="not_grounded">Not Grounded</string>
    
    <string name="TAG_TITLE_STRING">Not Grounded</string>

    <color name="light_gray">#F6F6F6</color>
    <color name="dark_grey">#e6e6e6</color>
    <color name="test">#cfd3d3</color>
    <color name="test1">#ff55e7e5</color>
    <color name="white">#ffffff</color>
    <color name="holo_blue_dark">#ff0099cc</color>
    <color name="holo_blue_light">#ff33b5e5</color>
    <color name="red">#ff0000</color>
    

</resources>