<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:dividerPadding="2dp"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/table_card"
            android:orientation="vertical"
            android:padding="1dp" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_heading"
                android:padding="2dp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Input"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/field_label"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/row_light"
                android:padding="5dp"
                android:textSize="@dimen/field_label"
                android:textStyle="bold" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="Line Voltage"
                        android:textSize="@dimen/field_label"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/lineVotageV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="85"
                            android:ems="10"
                            android:gravity="right"
                            android:hint="Enter Line Voltage"
                            android:inputType="numberDecimal" >

                            <requestFocus />
                        </EditText>

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="15"
                            android:text="V" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/row_dark"
                android:padding="5dp" >

                <RadioGroup
                    android:id="@+id/optionGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/openArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/open_air" />

                    <RadioButton
                        android:id="@+id/switchGears"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/switch_gears" />

                    <RadioButton
                        android:id="@+id/mcPanels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mcs_panels" />

                    <RadioButton
                        android:id="@+id/cables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cables" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/row_light"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="Line Voltage"
                        android:textSize="@dimen/field_label"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/lineVotageV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="85"
                            android:ems="10"
                            android:gravity="right"
                            android:hint="Enter Line Voltage"
                            android:inputType="numberDecimal" >

                            <requestFocus />
                        </EditText>

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="55"
                            android:text="V" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/row_dark" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/table_card"
        android:orientation="vertical"
        android:padding="1dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_heading"
            android:gravity="center"
            android:text="Result"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/field_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>